updated skills section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
     </header>
@@ -32,6 +33,85 @@
             <a href="https://github.com/Kartik0211">github</a> 
             
             </section>
+       <section id="skills" class="skills-section">
+    <h2 class="section-title">Skills</h2>
+        <div class="skills-grid">
+
+            <div class="skill-box">
+                <h3>Programming Languages</h3>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">Python</span>
+                        <p class="skill-desc">Used for EDA, ML models, and interactive dashboards.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 90%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">Java</span>
+                        <p class="skill-desc">Applied in basic programming, OOP concepts and problem-solving.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 75%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">JavaScript</span>
+                        <p class="skill-desc">Used in front-end logic and interactive UI behavior.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 80%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">HTML & CSS</span>
+                        <p class="skill-desc">Designed responsive UIs and layouts for multiple projects.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 85%"></div></div>
+                </div>
+
+            </div>
+
+            <div class="skill-box">
+                <h3>Frameworks & Tools</h3>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">Node.js & Express</span>
+                        <p class="skill-desc">Built real-time backend APIs and routing logic.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 70%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">Socket.io</span>
+                        <p class="skill-desc">Implemented live messaging and user socket tracking.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 65%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">Plotly & Seaborn</span>
+                        <p class="skill-desc">Created interactive charts for dashboards and reports.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 80%"></div></div>
+                </div>
+
+                <div class="skill">
+                    <div class="skill-header">
+                        <span class="skill-name">MySQL & Excel</span>
+                        <p class="skill-desc">Worked with databases, PivotTables, and VLOOKUP for insights.</p>
+                    </div>
+                    <div class="progress-bar"><div class="progress" style="width: 75%"></div></div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     
     <section id="projects">
         <h2>Projects</h2>
@@ -61,7 +141,8 @@
                 <a href="https://github.com/Kartik0211/real-time-chat.git">Project github repository </a>
         </div>
     </section>
-
     <script src="script.js"></script>
+
+
 </body>
 </html>
