--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <section id="hero">
         <h1>Welcome to My Portfolio</h1>
-        <p>I'm Kartik, A Engineerig Student</p>
+        <p>I'm Kartik, A Engineering Student</p>
         <a href="#about" class="btn">Learn More</a>
     </section>
     
