--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
+        <button class="menu-toggle" aria-label="Toggle navigation menu">☰</button>
+    </header>
     <section id="hero">
         <h1>Welcome to My Portfolio</h1>
         <p>I'm Kartik, A Engineering Student</p>
